feat: update box inner text on clicked

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Welcome to Game Tic Tac Toe</h1>
         <div>
           <span class="info">Turn for X</span>
-          <button id="reset" type="reset">Reset</button>
+          <button id="reset" >Reset</button>
         </div>
         <div class="imgBox">
           <img src="./excited.gif" alt="Image" />
